# vault

./: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  SECURITY.md  docker-compose.yml  vault-README.md
homepage/: README.md  next.config.ts  package.json
homepage/public/: manifest.json  robots.txt  sitemap.xml
homepage/src/app/: layout.tsx  page.tsx
homepage/src/app/about/: page.tsx
homepage/src/app/bounty/: page.tsx
homepage/src/app/contact-sales/: page.tsx
homepage/src/app/demo/: page.tsx
homepage/src/app/download/: page.tsx
homepage/src/app/features/: page.tsx
homepage/src/app/pricing/: page.tsx
homepage/src/app/product/: page.tsx
homepage/src/app/security/: page.tsx
homepage/src/components/: DemoBanner.tsx  DownloadSection.tsx  Footer.tsx  Navbar.tsx
homepage/src/components/3d/: BackgroundScene.tsx  ImmersiveScene.tsx
homepage/src/components/ui/: cursor-follower.tsx  mysterious-reveal.tsx
ios/: BUILDING.md  Package.swift  README.md  create_structure.sh
ios/Scripts/: build_rust_crypto.sh
ios/VaultMessenger/Core/Models/: Message.swift  User.swift
ios/VaultMessenger/Features/Messaging/: MessagesListView.swift
ios/VaultMessenger/Utilities/: NetworkSecurity.swift
mobile/android/: README.md
mobile/ios/: PROJECT_SUMMARY.md  README.md
mobile/ios/Scripts/: setup_project.sh
mobile/ios/VaultMessenger/: Info.plist  VaultMessenger-Bridging-Header.h
mobile/ios/VaultMessenger.xcodeproj/: project.pbxproj
mobile/ios/VaultMessenger/Bridge/Rust/: Cargo.toml  ffi_example.rs
server/: config.yaml
(+14 files in other folders)
