[package]
name = "vault-crypto-ios"
version = "1.0.0"
edition = "2021"

[lib]
name = "vault_crypto"
crate-type = ["staticlib"]

[dependencies]
# Cryptography
curve25519-dalek = "4.1"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
sha3 = "0.10"
blake3 = "1.5"

# Post-Quantum Crypto
# pqcrypto-kyber = "0.8"  # ML-KEM implementation

# Zero-Knowledge Proofs
# ark-groth16 = "0.4"
# ark-bn254 = "0.4"

# Utilities
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
hex = "0.4"
base64 = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
